some css overflow fixes

--- a/webinterface/app.css
+++ b/webinterface/app.css
@@ -9,7 +9,7 @@ Homer Stylesheet
 html, body {
     font-family: "Gotham Light", "Helvetica Neue", sans-serif;
     line-height: 1.5em;
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     color: #a2a3a3;
 }
@@ -19,7 +19,6 @@ body {
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    min-height: 100%;
     background-image: -webkit-gradient(linear, right top, left bottom, from(#5dabc4), to(#1d4574));
 }
 
@@ -28,11 +27,10 @@ body {
     background: #FFF;
     box-shadow: 0 0 9px rgba(0, 0, 0, 0.38);
     width: 300px;
-    height: 480px;
     padding: 35px;
     position: relative;
     margin: 35px auto;
-    overflow:hidden;
+    margin-bottom: ;
 }
 
 
@@ -41,7 +39,6 @@ body {
     border-bottom: 1px solid #e8e8e8;
     margin-bottom: 35px;
     padding-bottom: 30px;
-
 }
 
 h1 {
@@ -76,8 +73,20 @@ h2 {
     content: '/';
 }
 
+.view-footer {
+    margin-top: 35px;
+    padding-top : 30px;
+
+
+    font-size: 12px;
+}
+
 .device, .setting {
     margin-bottom: 35px;
+}
+
+.device:last-child, .setting:last-child {
+    margin-bottom: 0;
 }
 
 .device .controls 
